// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown/Component Custom menu width 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <button
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size="MEDIUM"
            type="NEUTRAL"
          >
            Select fruit
            <div
              className="icon"
              style={
                Object {
                  "marginLeft": 10,
                }
              }
            >
              <i
                className="wg-small-arrow-bottom"
              />
            </div>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component Icon only 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <button
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size="MEDIUM"
            type="NEUTRAL"
          >
            <div
              className="icon"
              style={
                Object {
                  "marginLeft": 0,
                }
              }
            >
              <i
                className="wg-small-arrow-bottom"
              />
            </div>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component Right aligned 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "flex-end",
      "width": 150,
    }
  }
>
  <div
    className="c0"
  >
    <div>
      <span
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="c1"
        >
          <div
            className="hitWrapper"
          >
            <button
              className="c2"
              disabled={false}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              size="MEDIUM"
              type="NEUTRAL"
            >
              <div
                className="icon"
                style={
                  Object {
                    "marginLeft": 0,
                  }
                }
              >
                <i
                  className="wg-small-arrow-bottom"
                />
              </div>
            </button>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With ref 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <button
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size="MEDIUM"
            type="NEUTRAL"
          >
            Select fruit
            <div
              className="icon"
              style={
                Object {
                  "marginLeft": 10,
                }
              }
            >
              <i
                className="wg-small-arrow-bottom"
              />
            </div>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With selected item 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <button
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size="MEDIUM"
            type="NEUTRAL"
          >
            Select fruit
            <div
              className="icon"
              style={
                Object {
                  "marginLeft": 10,
                }
              }
            >
              <i
                className="wg-small-arrow-bottom"
              />
            </div>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With text 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  className="c0"
>
  <div>
    <span
      aria-expanded={false}
      aria-haspopup={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="c1"
      >
        <div
          className="hitWrapper"
        >
          <button
            className="c2"
            disabled={false}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            size="MEDIUM"
            type="NEUTRAL"
          >
            Select fruit
            <div
              className="icon"
              style={
                Object {
                  "marginLeft": 10,
                }
              }
            >
              <i
                className="wg-small-arrow-bottom"
              />
            </div>
          </button>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Storyshots Dropdown/Component With z-index 1`] = `
.c1 {
  display: inline-block;
}

.c1 .hitWrapper {
  position: relative;
}

.c1 .hitWrapper .hit {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c2 .icon {
  color: rgba(255,255,255,0.56);
}

.c2 .icon i {
  vertical-align: text-bottom;
}

.c2:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c2:focus {
  box-shadow: none;
}

.c2:hover .icon,
.c2:focus .icon {
  color: white;
}

.c2 > .icon {
  color: rgba(0,0,0,0.32);
}

.c2:hover,
.c2:focus {
  color: #3498db;
  border-color: #3498db;
}

.c2:hover > .icon,
.c2:focus > .icon {
  color: #3498db;
}

.c2:disabled,
.c2:disabled .icon,
.c2:disabled :hover {
  color: rgba(0,0,0,0.32);
}

.c2:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c0 {
  font-family: lato,sans-serif;
  display: inline-block;
  position: relative;
}

.c0 *:focus {
  outline: none;
}

<div
  style={
    Object {
      "background": "aliceblue",
      "display": "flex",
      "width": 250,
      "zIndex": 9,
    }
  }
>
  <div
    style={
      Object {
        "marginRight": "10px",
      }
    }
  >
    z-index: 9
  </div>
  <div
    className="c0"
  >
    <div>
      <span
        aria-expanded={false}
        aria-haspopup={true}
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="c1"
        >
          <div
            className="hitWrapper"
          >
            <button
              className="c2"
              disabled={false}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              size="MEDIUM"
              type="NEUTRAL"
            >
              <div
                className="icon"
                style={
                  Object {
                    "marginLeft": 0,
                  }
                }
              >
                <i
                  className="wg-small-arrow-bottom"
                />
              </div>
            </button>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    style={
      Object {
        "background": "rgba(0, 0, 0, 0.5)",
        "height": 120,
        "marginLeft": "10px",
        "width": 75,
        "zIndex": 11,
      }
    }
  >
    z-index: 11
  </div>
</div>
`;
